arm64/dts:devonn:adjust I2C9 to 400kHZ for smart pa
as hardware request.
adjust I2C9 to 400kHZ for smart pa.
i2c9 just used for aw smart pa. don't impact other devices.

Change-Id: I453e7e82bcd96e77c7474e6718411813b241138e
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2357650
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -298,6 +298,10 @@
 
 &i2c9 {
 	status = "okay";
+	clock-frequency = <400000>;
+	#address-cells = <1>;
+	#size-cells = <0>;
+
 	aw883xx_smartpa_0: aw883xx@34 {
                 compatible = "awinic,aw883xx_smartpa";
                 #sound-dai-cells = <0>;
