arm64/dts: sgm4154x optimize the iuput current
To ensure stable bc1.2 recognize, optimize the sgm4154x
input charGing current 500mA.

Change-Id: Ib8650042ada75bf012efcfd81071b6e59f1fc8ff
Signed-off-by: Lei Chen <chenlei18@mt.com>
Reviewed-on: https://gerrit.mot.com/2357726
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Wang Wang <wangwang1@mt.com>
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -167,6 +167,7 @@
 
 		chg_name = "primary_chg";
 		input-voltage-limit-microvolt = <4700000>;
+		input-current-limit-microamp = <500000>;
 
 		/* sw jeita  parameter customer defined*/
 		enable_sw_jeita;
@@ -220,6 +221,7 @@
 
                 chg_name = "primary_chg";
                 input-voltage-limit-microvolt = <4700000>;
+		input-current-limit-microamp = <500000>;
 
                 /* sw jeita  parameter customer defined*/
                 enable_sw_jeita;
