devonf:disable ltepa_ntc so pa_therm1 can read
tcmd test need to read pa_therm1.

Change-Id: Ibdb2822faa0ea2c1484f4cb514febfee5fb08a06
Reviewed-on: https://gerrit.mot.com/2359346
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -995,6 +995,10 @@ chipone,enable-wakeup;
 		125000 2522>;
 };
 
+&ltepa_ntc {
+	status = "disabled";
+};
+
 &thermal_zones{
 		ap_ntc: ap_ntc {
 			polling-delay = <0>; /* milliseconds */
