arm/dts: add devonn battery parameter
Add 1st battery parameter
 for devonn.

Change-Id: I25279f06fdbf4609659f9895656b1a0807437130
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2359530
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -115,11 +115,13 @@
 		2180 1620 1503 1511
 		2170 1610 1493 1501>;
 
+	TEMPERATURE_T4 = <(-10)>;
 	ACTIVE_TABLE = <(5)>;
 	R_FG_VALUE = <(5)>;
 	NO_BAT_TEMP_COMPENSATE = <(1)>;
-	df-serialnum = "SB18D39674";
-	#include "bat_setting/mt6879_battery_nf50_atl_5000mah.dtsi"
+
+	df-serialnum = "SB18D57454";
+	#include "bat_setting/mt6855_battery_pd50_sunw_5000mah.dtsi"
 };
 
 &charge_leds {
