kernel/configs:devonn:enable okg
enable okg for devonn.
6855 platform don't support dual mic okg currently.

Change-Id: Id321781439078d88ff3949672b01029e70060d75
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2362500
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -89,3 +89,7 @@ CONFIG_I2C_CHARDEV=y
 
 # CONFIG_SCSI_UFS_HPB is not set
 # CONFIG_UFSSHPB is not set
+
+# CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
+CONFIG_MTK_VOW_GVA_SUPPORT=y
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
