devonf: Modify main&front i2c speed
details:
Increasing the I2C bus speed is used to improve the camera startup Kpi

Change-Id: Id41d208d8acc318feadaeb4f975a16063ab15e2f
Signed-off-by: qiaopf1 <qiaopf1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2362533
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: <wuyh23@motorola.com>
Reviewed-by: <yangmf3@motorola.com>
Tested-by: Jira Key
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855_devonf_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855_devonf_camera_overlay.dtsi
@@ -423,18 +423,12 @@
 /* CAMERA EEPROM */
 &i2c2 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	size-cells = <0>;
 	mtk_camera_eeprom0:camera_eeprom0@50 {
 		compatible = "mediatek,camera_eeprom";
 		reg = <0x50>;
-		status = "okay";
-	};
-	camera_main_three_mtk:camera_main_three@10 {
-		compatible = "mediatek,camera_main_three";
-		#thermal-sensor-cells = <0>;
-		reg = <0x10>;
 		status = "okay";
 	};
 	camera_main_mtk:camera_main@1a {
@@ -451,7 +445,7 @@
 };
 &i2c4 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 	mtk_camera_eeprom1:camera_eeprom1@51 {
@@ -512,11 +506,6 @@
 		polling-delay = <1000>; /* milliseconds */
 		polling-delay-passive = <0>; /* milliseconds */
 		thermal-sensors = <&camera_main_two_mtk>;
-	};
-	camera_main_three: camera_main_three {
-		polling-delay = <1000>; /* milliseconds */
-		polling-delay-passive = <0>; /* milliseconds */
-		thermal-sensors = <&camera_main_three_mtk>;
 	};
 };
 /* CAMERA TZ config end */
