--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -104,3 +104,7 @@ CONFIG_MTK_C2K_LTE_MODE=0
 
 #disable MTK default touch drives
 CONFIG_TOUCHSCREEN_MTK_TOUCH=""
+
+# CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
+CONFIG_MTK_VOW_GVA_SUPPORT=y
+CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
