dts/devonf:NVT touch add report gesture config
devonf:NVT touch
add report gesture config to support tap feature

Change-Id: Icd4747c43f971889369b1fc8d93fc0aae18c3857
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2363473
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
@@ -19,6 +19,7 @@
 		novatek,reset-gpio = <&pio 3 0x00>;
 		novatek,irq-gpio = <&pio 22 0x2001>;
 		novatek,usb_charger;
+		novatek,report_gesture_key;
 		novatek,psy-name = "battery";
 
 		// 525
