--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -272,6 +272,7 @@
 	CAR_TUNE_VALUE = <(100)>;
 	COM_FG_METER_RESISTANCE = <(80)>;
 	FG_CURRENT_PN_LABEL = <(1)>;
+	EMBEDDED_SEL = <(1)>;
 	DIFFERENCE_FULLOCV_ITH = <(243)>;
 	g_Q_MAX_row = <4>;
 	g_Q_MAX_col = <10>;
