battery/dts: Devonn Optimize battery curve parameter
update 1st battery parameter
for devonn.

Change-Id: Ide943f68d5c09e3c6df045d66261ff296487f048
Signed-off-by:  Wei Zhang <wingte85@motorola.com>
Reviewed-on: https://gerrit.mot.com/2365852
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -79,6 +79,9 @@
 	EMBEDDED_SEL = <(1)>;  /*embedded battery,don't remove the battery for user*/
 	VIR_OLDOCV_DIFF_EMB = <3000>; /*0.1mv*/
 	VIR_OLDOCV_DIFF_EMB_LT = <3000>; /*0.1mv*/
+        CAR_TUNE_VALUE = <(100)>;
+        CURR_MEASURE_20A = <(0)>;
+        UNIT_MULTIPLE = <(1)>;
 
 	/* battery prop */
 	g_temperature = <(50) (25) (10) (0) (-10) (-25) (-30) (-35) (-40) (-45)>;
