--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -1268,8 +1268,9 @@
 };
 
 &charger_cooler {
-        mmi,thermal-mitigation = <(-1) 5500000 5000000 4500000 4000000 3000000
-                                2000000 1000000 500000>;
+	bootmode = <&chosen>;
+        mmi,thermal-mitigation = <(-1) 5500000 5000000 4000000 3000000
+                                2000000 1500000 1000000 500000>;
 };
 
 &swtp {
