--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -7686,7 +7686,7 @@
 		charging_host_charger_current = <1500000>;
 
 		/* dynamic mivr */
-		enable_dynamic_mivr;
+		/*enable_dynamic_mivr;*/
 		min_charger_voltage_1 = <4400000>;
 		min_charger_voltage_2 = <4200000>;
 		max_dmivr_charger_current = <1800000>;
