Optimize the eye map parameters
Optimize the eye map parameters
fix the connection problem that the OTG interconnection of two machines
cannot enumerate

Change-Id: I20104ba794e5eec87bd4bb9c9f1e89a8c79c028e
Signed-off-by: hq102 <hq102@motorola.com>
Reviewed-on: https://gerrit.mot.com/2369505
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zonghua Liu <a17671@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Wei Xu <xuwei9@mt.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -121,8 +121,11 @@
 
 &u2port0 {
     mediatek,eye-vrt = <7>;
-    mediatek,eye-term = <7>;
-    mediatek,rev6 = <2>;
+    mediatek,eye-term = <0>;
+    mediatek,rev6 = <1>;
+    mediatek,eye-vrt-host = <7>;
+    mediatek,eye-term-host = <0>;
+    mediatek,rev6-host = <1>;
 };
 
 &i2c6 {
