kernel/Devonn:Ensure the aw99703/ktd3136 supply to standard
Modify:
 Ensure the brightness of backlight IC of aw99703/ktd3136 power
 supply meets the standard

Change-Id: I2a9d38e260518325b527495e9230fc29a6f9ec1e
Signed-off-by: wingte49 <wingte49@motorola.com>
Reviewed-on: https://gerrit.mot.com/2369565
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -42,7 +42,7 @@
                 aw99703,switch-freq = <1>; /* 1000kHz(default) */
                 aw99703,auto-freq-high = <0x10>;
                 aw99703,auto-freq-low = <0x05>;
-                aw99703,bl-fscal-led = <0x17>; /* 24.8mA */
+                aw99703,bl-fscal-led = <0x19>; /* 24.8mA */
                 aw99703,bl-channel = <3>;
                 aw99703,turn-on-ramp = <0x00>; /* 512us */
                 aw99703,turn-off-ramp = <0x04>; /* 8ms */
@@ -54,16 +54,15 @@
                 aw99703,default-brightness = <1810>;
 
                 ktd,hwen-gpio = <&pio 161 1>;
-                ktd,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
                 ktd,using-lsb;
                 ktd,pwm-frequency = <1>; /* 1MHZ */
-                ktd,bl-fscal-led = <0x19>; /* 25mA */
-                ktd,turn-on-ramp = <0x00>;
-                ktd,turn-off-ramp = <0x04>;
-                ktd,pwm-trans-dim = <0>;
-                ktd,i2c-trans-dim = <1>;
+                ktd,bl-fscal-led = <0xC9>; /* 25mA */
+                ktd,turn-on-ramp = <0x08>;
+                ktd,turn-off-ramp = <0x08>;
+                ktd,pwm-trans-dim = <4>;
+                ktd,i2c-trans-dim = <256>;
                 ktd,bl-channel = <3>;
-                ktd,ovp-level = <2>;
+                ktd,ovp-level = <32>;/* 32V */
                 ktd,switching-frequency = <1>;
                 ktd,inductor-current = <1>;
 	};
