arm64/dt: devonn: enable vibrator auto_brk
Enable vibrator auto_brk to improve the vibrator
waveform for long vibration

Change-Id: I775a47745722c34d4edae9ec0c8c045e33e19f61
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2370724
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -227,6 +227,7 @@
 					    0 0 0 1 0 2 0
 					    0 0 0 1 0 2 0 >;
 		aw8622x_vib_duration_time = < 34 67 100 >;
+		aw8622x_vib_is_enabled_auto_brk;
 		status = "okay";
 	};
 };
