--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -82,6 +82,8 @@
         CAR_TUNE_VALUE = <(100)>;
         CURR_MEASURE_20A = <(0)>;
         UNIT_MULTIPLE = <(1)>;
+	SHUTDOWN_1_TIME = <(10)>;
+	/* If ui_soc shows 1% more than X minites, system will shutdown */
 
 	/* battery prop */
 	g_temperature = <(50) (25) (10) (0) (-10) (-25) (-30) (-35) (-40) (-45)>;
