--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
@@ -18,3 +18,9 @@
 	moto_chg_tcmd: moto_chg_tcmd { };
 	flashlights_devonf: flashlights_devonf { };
 };
+
+&mt6375_typec {
+	/delete-property/ tcpc,en_wd;
+	/delete-property/ tcpc,en_wd_sbu_polling;
+	/delete-property/ tcpc,en_wd_polling_only;
+};
