arm64/dst:devonn:enable fade in for smart pa
enable fade in for smart pa.
let notification ramp take effect.

Change-Id: Ic9d319ba0bbf40d39d264d91e90e693db53c2713
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2375173
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -312,6 +312,7 @@
                 re-min = <1000>;
                 re-max = <40000>;
 		rename-flag=<1>;
+		fade-enable = <1>;
                 status = "okay";
         };
         aw883xx_smartpa_1: aw883xx@36 {
@@ -323,6 +324,7 @@
                 re-min = <1000>;
                 re-max = <40000>;
 		rename-flag=<1>;
+		fade-enable = <1>;
                 status = "okay";
         };
 };
