--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -17,6 +17,9 @@
 	max_charger_voltage = <11000000>;
 	min_charger_voltage = <4600000>;
 
+	/* sw jeita */
+	enable_vbat_mon = <0>;
+
 	/*pe4 && pdc && pe2*/
 	fast_charging_indicator = <0x0E>;
 
