Enable SVP for widevine L1
Add kernel configs to enable SVP function
To merge DRM temp patch from MTK to test widevine L1 function on MT6855

this change is to port change at: 2250281
referenced by idart change: (CR)

Change-Id: I599d48f3c69155186e824c608ad3fce3fc4267b8
Signed-off-by: wufu1 <wufu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2376144
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jiefeng Ou <oujf@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -142,6 +142,16 @@
 	regulator-always-on;
 };
 
+/* SVP */
+&mtee_svp {
+	mtee: MTEE {
+		compatible = "mediatek,mtk_svp_on_mtee_support";
+	};
+	svp: SecureVideoPath {
+		compatible = "mediatek,mtk_sec_video_path_support";
+	};
+};
+
 &spi1 {
 	status = "okay";
 	mediatek,pad-select = <0>, <1>;
