--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -37,6 +37,8 @@
 	focaltech,display-coords = <0 0 1080 2400>;
 	focaltech,report_gesture_key = <59>;
 	focaltech,panel-supplier = "txd","csot";
+	focaltech,touch-charger-detect-psy-name = "battery";
+	focaltech,touch-charger-detect-psp = "POWER_SUPPLY_PROP_STATUS";
 	};
 };
 
