drm/panel:devonf:2nd backlight ktd max brightness update
devonf: 2nd backlight ktd
ktd max brightness update

Change-Id: I2bc20c7394d0613bc8dc50874310efa14fc69d05
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2378870
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
@@ -58,7 +58,7 @@
                 ktd,pwm-mode = <1>; /* 1 pwm enable,0 PWM disable */
                 ktd,using-lsb;
                 ktd,pwm-frequency = <1>; /* 1MHZ */
-                ktd,bl-fscal-led = <0x19>; /* 25mA */
+                ktd,bl-fscal-led = <0xC1>; /* 25mA */
                 ktd,turn-on-ramp = <0x00>;
                 ktd,turn-off-ramp = <0x04>;
                 ktd,pwm-trans-dim = <0>;
