arm64/dts: optimization gauge cut-off current
Optimization gauge cut-off current and
 IEOC cureent for devonn.

Change-Id: I81495d0d129905c436f0a484a74be8af89eb964f
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2379985
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -78,7 +78,7 @@
 
 &mtk_gauge {
 
-	DIFFERENCE_FULLOCV_ITH = <80>;  /*gauge cut-off current, should overtop ieoc 50ma*/
+	DIFFERENCE_FULLOCV_ITH = <350>;  /*gauge cut-off current, should overtop ieoc 50ma*/
 	EMBEDDED_SEL = <(1)>;  /*embedded battery,don't remove the battery for user*/
 	VIR_OLDOCV_DIFF_EMB = <3000>; /*0.1mv*/
 	VIR_OLDOCV_DIFF_EMB_LT = <3000>; /*0.1mv*/
@@ -88,6 +88,7 @@
 	SHUTDOWN_1_TIME = <(10)>;
 	/* If ui_soc shows 1% more than X minites, system will shutdown */
 
+	CHARGER_IEOC = <(243)>;
 	/* battery prop */
 	g_temperature = <(50) (25) (10) (0) (-10) (-25) (-30) (-35) (-40) (-45)>;
 	g_FG_PSEUDO100 = <99 99 100 100
