--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -130,6 +130,7 @@
 
 	df-serialnum = "SB18D57454";
 	#include "bat_setting/mt6855_battery_pd50_sunw_5000mah.dtsi"
+        #include "bat_setting/mt6855_battery_pd50_scud_5000mah.dtsi"
 };
 
 &charge_leds {
