arm/dts: set charGing current 1A in DBR
Set charGing current 1A
 in DBR for devonn.

Change-Id: I2abfba165b2ea51a5e486a08c9ee01484a1428c4
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2380722
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -173,4 +173,13 @@
 &lk_charger {
 	/*boot voltage*/
 	boot_battery_voltage = <3560000>;
+
+	/* charging current */
+	usb_charger_current = <500000>;
+	ac_charger_input_current = <1500000>;
+	charging_host_input_current = <1500000>;
+
+	ac_charger_current = <1000000>;
+	non_std_ac_charger_current = <1000000>;
+	charging_host_charger_current = <1000000>;
 };
