arm/dts: set boot voltage for devonn
Set boot voltage 3.56V
 for devonn.

Change-Id: I917b3afd4aa3ca4f546be08f5e637561b7378e2b
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2380719
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -169,3 +169,8 @@
 	mmi,adc-channel-batid = <3>;
 	mmi,adc-channel-vbat = <100>;
 };
+
+&lk_charger {
+	/*boot voltage*/
+	boot_battery_voltage = <3560000>;
+};
