kernel/Devonn:Fix charGing interface has no backlight.
1.For lk2,
Backlight driver get the backlight  from dts.
And at mtk code, the max backlight is 255.
2.Now DUT in DBR. Accessory applied. Battery temperature in Normal range.
Battery capacity in different levels,change this will set normal
backlight.
Change-Id: I8363a582eef2142fb4e40ad5c7f0fbd2656a0679
Signed-off-by: wingte72 <wingte72@motorola.com>
Reviewed-on: https://gerrit.mot.com/2383957
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -75,9 +75,9 @@
 	backlight {
 		label = "lcd-backlight";
 		led_mode = <6>;
-		max-brightness = <2047>;
+		max-brightness = <255>;/*for lk mapping*/
 		max-hw-brightness = <2047>;
-		default-brightness = <1810>;
+		default-brightness = <153>;
 	};
 };
 
