devonn: wld: modem: SWTP (CF) feature optimization
 1.CF status:ANT0/1/4/5_DECT_GIPO = LOW;
 2.High level trigger;

Change-Id: If17b381468c3bf5635f8fe2742e459c7740c4d9d
pick-from:https://gerrit-cn.motorola.com/#/c/37302/1
Reviewed-on: https://gerrit.mot.com/2384090
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shengqi Wang <wangsq2@motorola.com>
Reviewed-by: Yifu Lin <linyf@mt.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/port/Makefile
+++ b/drivers/misc/mediatek/eccci/port/Makefile
@@ -46,3 +46,8 @@ ccci_port-y := port_cfg.o \
 
 endif
 
+# Disable SWTP on factory version for devonn
+ifeq ($(TARGET_PRODUCT),devonn_factory)
+ccflags-y += -DDISABLE_SWTP_FACTORY
+endif
+
