kernel/dts:devonf:add supported gesture type for double tap feature
devonf: double tap feature support
add supported gesture type config

Change-Id: I4329896e0edd8c802a580adefc0eaa2976674423
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2385498
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-touch.dtsi
@@ -20,6 +20,7 @@
 		novatek,irq-gpio = <&pio 22 0x2001>;
 		novatek,usb_charger;
 		novatek,report_gesture_key;
+		novatek,supported_gesture_type = <0x06>; //bit2-0: double:single:zero tap
 		novatek,psy-name = "battery";
 
 		// 525
